# snchat

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  constants.py  diagnostics_report.py  diary_query_router.py  diary_search_query.py  generation.py  parser.py  pyproject.toml  tracing.py
.github/workflows/: ci.yml
docs/: diagnostics.md  error_modes.md  mock_diary.md
tests/: mock_diary.py  replay_answer_key.py  test_diagnostics_report.py  test_extract_fallback.py  test_generation.py  test_keyword_hit.py  test_mock_diary.py  test_mock_retrieval.py  test_tracing.py
