[project]
name = "snchat"
version = "0.1.0"
description = "Fully local, offline RAG chat over a Standard Notes diary export (Streamlit + ChromaDB + Ollama)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "rapidfuzz>=3.10.0",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "arize-phoenix>=17.18.0",
    "openinference-instrumentation-langchain>=0.1.67",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
from-first = false
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "app.py"]  # Streamlit UI; only exercised by live-Ollama E2E, not CI

[tool.coverage.report]
show_missing = true
